[package]
name = "dhcp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet="0.33.0"
byteorder = "1"
log = "0.4"
env_logger = "0.6.1"
failure = "0.1.5"
rusqlite = "0.29.0"
ipnetwork = "0.14.0"